<resources>
    <string name="app_name">EvoScape</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="email_and_pass">Email and Password</string>
    <string name="services">Services</string>
    <string name="loading">Loading...</string>
    <string name="save">Save</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="change_pass">Change Password</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="goto_notif_settings">Go To Notification Settings</string>
    <string name="live_updates">On The Go updates</string>
    <string name="news">News and Updates</string>
    <string name="home_address">Home Address</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="settings">Settings</string>
</resources>
