<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.NotificationSettingsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center_vertical"
                android:text="@string/push_notifications"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switchPushNotifs"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                app:srcCompat="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center_vertical"
                android:text="@string/goto_notif_settings"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageViewGotoNotifSettings"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_go" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                app:srcCompat="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center_vertical"
                android:text="@string/live_updates"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switchLiveUpdates"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                app:srcCompat="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center_vertical"
                android:text="@string/news"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switchNews"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                app:srcCompat="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>